// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormTextInput renders correctly with error 1`] = `
<label class="govuk-label"
       for="test-input"
>
  Test input
</label>
<span class="govuk-error-message"
      id="test-input-error"
>
  <span class="govuk-visually-hidden">
    Error:
  </span>
  Field is required
</span>
<div class>
  <input name="testInput"
         aria-describedby="test-input-error"
         class="govuk-input govuk-input--error"
         id="test-input"
         type="text"
  >
</div>
`;

exports[`FormTextInput renders correctly with hint 1`] = `
<label class="govuk-label"
       for="test-input"
>
  Test input
</label>
<span id="test-input-hint"
      class="govuk-hint"
>
  Fill me in
</span>
<div class>
  <input name="testInput"
         aria-describedby="test-input-hint"
         class="govuk-input"
         id="test-input"
         type="text"
  >
</div>
`;

exports[`FormTextInput renders correctly with required props 1`] = `
<label class="govuk-label"
       for="test-input"
>
  Test input
</label>
<div class>
  <input name="testInput"
         class="govuk-input"
         id="test-input"
         type="text"
  >
</div>
`;

exports[`FormTextInput renders with a specific width class 1`] = `
<label class="govuk-label"
       for="test-input"
>
  Test input
</label>
<span id="test-input-hint"
      class="govuk-hint"
>
  Fill me in
</span>
<div class>
  <input name="testInput"
         aria-describedby="test-input-hint"
         class="govuk-input govuk-input--width-20"
         id="test-input"
         type="text"
  >
</div>
`;

exports[`FormTextInput renders with an add on 1`] = `
<label class="govuk-label"
       for="test-input"
>
  Test input
</label>
<span id="test-input-hint"
      class="govuk-hint"
>
  Fill me in
</span>
<div class="dfe-flex">
  <input name="testInput"
         aria-describedby="test-input-hint"
         class="govuk-input govuk-input--width-20"
         id="test-input"
         type="text"
  >
  <button type="button">
    Click me!
  </button>
</div>
`;
